# JinjaTemplating

./: .env  .gitignore  dev.docker-compose.yml  docker-compose.yml  jte  pyproject.toml  setup.py  toto.DEV.md  toto.PPR.md
Models/: CustomizeOneParameters.py
Modules/: CustomLogging.py  EntryPoint.py  RendererContext.py
Modules/Parser/: YamlParser.py
Tests/: testCommon.py
Tests/Resources/: envFileTest  renderInRender  renderInRender.j2  toto.j2
Tests/Resources/ConfigTest/SubTemplates/: kustomization-new-passwords.yaml.j2
Tests/Resources/Mails/: MFM.json  horus_logistique.json
Tests/Resources/Mails/Templates/: mails.j2.md
Tests/results/: toto.DEV.html  toto.PRD.md  toto.REC.md  toto.VABF.md
jinja_templating/models/: customize_one_parameters.py
jinja_templating/modules/: custom_logging.py  entry_point.py  renderer_context.py
jinja_templating/modules/parser/: env_file_parser.py  json_parser.py  yaml_parser.py
tests/: test_base.py
tests/resources/: envFileTest  renderInRender  renderInRender.j2  toto  toto.j2
tests/resources/config/: env.prod.yaml  envs.yaml  generate.j2
tests/resources/mails/: horus_logistique.json
unit_tests/: MyObject.py  testCommon.py  test_common.py  test_jte.py
unit_tests/resources/: renderInRender.j2  toto  toto.j2  vars.json
unit_tests/resources/ConfigTest/: env.preprod.yaml
unit_tests/resources/Mails/Templates/: mails-dev.j2  mails-ops.j2
unit_tests/resources/openvpn/: openvpn.conf  openvpn.conf.j2
