[project]

name = "jinja-templating"
requires-python = ">=3.11"
version = "1.0"

dependencies = [
    "jinja2",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pylint", "pytest"]

[console_scripts]
jte = "tsss"

[tool.pytest.ini_options]
testpaths = [
    "unit_tests",
    "tests",
]

log_cli = "True"
log_cli_level = "DEBUG"